apps/charity/pages/styles.css
@import url('https://fonts.googleapis.com/css2?family=Corben:wght@700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Dangrek&display=swap');
@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;700;900&display=swap');

body {
  margin: 0;
  padding: 0;
}

main {
  min-height: 100dvh;
  height: 100%;
  width: 100%;
  overflow: auto;
  display: flex;
}

